--- a/index.html
+++ b/index.html
@@ -5,33 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>D3 UI Prototype</title>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://d3js.org/topojson.v0.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <p>Hello Wrold!</p>
     <br>
-    <script type="text/javascript">
-        var width = 900;
-        var height = 600;
-  
-        var projection = d3.geo.mercator();
-        
-        var svg = d3.select("body").append("svg")
-            .attr("width", width)
-            .attr("height", height);
-        var path = d3.geo.path()
-            .projection(projection);
-        var g = svg.append("g");
-        
-        d3.json("world-110m2.json", function(error, topology) {
-            g.selectAll("path")
-              .data(topojson.object(topology, topology.objects.countries)
-                  .geometries)
-            .enter()
-              .append("path")
-              .attr("d", path)
-        });
-      </script>
 </body>
 </html>
