--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,13 +8,13 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-    <p>Hello Wrold!</p>
+    <p>Hello Puta!</p>
     <br />
     <div class="example_graph"></div>
   </body>
-</html> -->
+</html>
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <svg width="960" height="500"></svg>
 <style>
 	.bar {
@@ -87,4 +87,4 @@ d3.json("fake_data.json").then(function (data) {
 	});
 });
 
-</script>
+</script> -->
