--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-    <p>Hello Puta!</p>
+    <p>Hello Ya'll!</p>
     <br />
     <div class="example_graph"></div>
   </body>
