--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
     <br />
     <div class="example_graph"></div>
   </body>
-</html> -->
+</html>
 
 <!-- <!DOCTYPE html>
 <svg width="960" height="500"></svg>
@@ -89,7 +89,7 @@ d3.json("fake_data.json").then(function (data) {
 
 </script> -->
 
-<!doctype html>
+<!-- <!doctype html>
 <html>
 <head>
     <style>
@@ -162,4 +162,4 @@ d3.json("fake_data.json").then(function (data) {
     });
 </script>
 </body>
-</html>
+</html> -->
