--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>D3 UI Prototype</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <p>Hello Ya'll!</p>
