--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <p>Hello Ya'll!</p>
+    <p>Hello You FUCK!</p>
     <br />
     <div class="example_graph"></div>
   </body>
