--- a/index.html
+++ b/index.html
@@ -1,19 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <link rel="stylesheet" href="index.css" />
+    <title>D3 UI Prototype</title>
+  </head>
+  <body>
+    <svg></svg>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script>
+      var svgWidth = 500;
+      var svgHeight = 300;
+
+      var svg = d3
+        .select("svg")
+        .attr("width", svgWidth)
+        .attr("height", svgHeight)
+        .attr("class", "bar-chart");
+
+      var dataset = [80, 100, 56, 120, 180, 30, 40, 120, 160];
+
+      var barPadding = 5;
+      var barWidth = svgWidth / dataset.length;
+
+      var barChart = svg
+        .selectAll("rect")
+        .data(dataset)
+        .enter()
+        .append("rect")
+        .attr("y", function(d) {
+          return svgHeight - d;
+        })
+        .attr("height", function(d) {
+          return d;
+        })
+        .attr("width", barWidth - barPadding)
+        .attr("transform", function(d, i) {
+          var translate = [barWidth * i, 0];
+          return "translate(" + translate + ")";
+        });
+    </script>
+  </body>
+</html>
+
+<!-- <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>D3 UI Prototype</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="index.js"></script>
+    <script></script>
   </head>
   <body>
     <p>Hello You FUCK!</p>
     <br />
-    <div class="example_graph"></div>
+    <div class="bar-chart"></div>
   </body>
-</html>
+</html> -->
 
 <!-- <!DOCTYPE html>
 <svg width="960" height="500"></svg>
