--- a/index.html
+++ b/index.html
@@ -7,203 +7,6 @@
   <body>
     <svg></svg>
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script>
-      var svgWidth = 500;
-      var svgHeight = 300;
-
-      var svg = d3
-        .select("svg")
-        .attr("width", svgWidth)
-        .attr("height", svgHeight)
-        .attr("class", "bar-chart");
-
-      var dataset = [80, 100, 56, 120, 180, 30, 40, 120, 160];
-
-      var barPadding = 5;
-      var barWidth = svgWidth / dataset.length;
-
-      var barChart = svg
-        .selectAll("rect")
-        .data(dataset)
-        .enter()
-        .append("rect")
-        .attr("y", function(d) {
-          return svgHeight - d;
-        })
-        .attr("height", function(d) {
-          return d;
-        })
-        .attr("width", barWidth - barPadding)
-        .attr("transform", function(d, i) {
-          var translate = [barWidth * i, 0];
-          return "translate(" + translate + ")";
-        });
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
-
-<!-- <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>D3 UI Prototype</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script></script>
-  </head>
-  <body>
-    <p>Hello You FUCK!</p>
-    <br />
-    <div class="bar-chart"></div>
-  </body>
-</html> -->
-
-<!-- <!DOCTYPE html>
-<svg width="960" height="500"></svg>
-<style>
-	.bar {
-	  fill: steelblue;
-	}
-
-	.bar:hover {
-	  fill: brown;
-	}
-</style>
-// <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="//d3js.org/d3.v5.min.js"></script>
-<script>
-
-var svg = d3.select("svg"),
-margin = {
-	top: 20,
-	right: 20,
-	bottom: 30,
-	left: 50
-},
-width = +svg.attr("width") - margin.left - margin.right,
-height = +svg.attr("height") - margin.top - margin.bottom,
-g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-var parseTime = d3.timeParse("%d-%b-%y");
-
-var x = d3.scaleBand()
-	.rangeRound([0, width])
-	.padding(0.1);
-
-var y = d3.scaleLinear()
-	.rangeRound([height, 0]);
-
-d3.json("fake_data.json").then(function (data) {
-	x.domain(data.map(function (d) {
-			return d.Run;
-		}));
-	y.domain([0, d3.max(data, function (d) {
-				return Number(d.Speed);
-			})]);
-
-	g.append("g")
-	.attr("transform", "translate(0," + height + ")")
-	.call(d3.axisBottom(x))
-
-	g.append("g")
-	.call(d3.axisLeft(y))
-	.append("text")
-	.attr("fill", "#000")
-	.attr("transform", "rotate(-90)")
-	.attr("y", 6)
-	.attr("dy", "0.71em")
-	.attr("text-anchor", "end")
-	.text("Speed");
-
-	g.selectAll(".bar")
-	.data(data)
-	.enter().append("rect")
-	.attr("class", "bar")
-	.attr("x", function (d) {
-		return x(d.Run);
-	})
-	.attr("y", function (d) {
-		return y(Number(d.Speed));
-	})
-	.attr("width", x.bandwidth())
-	.attr("height", function (d) {
-		return height - y(Number(d.Speed));
-	});
-});
-
-</script> -->
-
-<!-- <!doctype html>
-<html>
-<head>
-    <style>
-        .bar {
-            fill: steelblue;
-        }
-    </style>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-<body>
-<svg width="600" height="500"></svg>
-<script>
-
-    var svg = d3.select("svg"),
-        margin = 200,
-        width = svg.attr("width") - margin,
-        height = svg.attr("height") - margin
-
-    svg.append("text")
-       .attr("transform", "translate(100,0)")
-       .attr("x", 50)
-       .attr("y", 50)
-       .attr("font-size", "24px")
-       .text("XYZ Foods Stock Price")
-
-    var xScale = d3.scaleBand().range([0, width]).padding(0.4),
-        yScale = d3.scaleLinear().range([height, 0]);
-
-    var g = svg.append("g")
-               .attr("transform", "translate(" + 100 + "," + 100 + ")");
-
-    d3.csv("XYZ.csv", function(error, data) {
-        if (error) {
-            throw error;
-        }
-
-        xScale.domain(data.map(function(d) { return d.year; }));
-        yScale.domain([0, d3.max(data, function(d) { return d.value; })]);
-
-        g.append("g")
-         .attr("transform", "translate(0," + height + ")")
-         .call(d3.axisBottom(xScale))
-         .append("text")
-         .attr("y", height - 250)
-         .attr("x", width - 100)
-         .attr("text-anchor", "end")
-         .attr("stroke", "black")
-         .text("Year");
-
-        g.append("g")
-         .call(d3.axisLeft(yScale).tickFormat(function(d){
-             return "$" + d;
-         })
-         .ticks(10))
-         .append("text")
-         .attr("transform", "rotate(-90)")
-         .attr("y", 6)
-         .attr("dy", "-5.1em")
-         .attr("text-anchor", "end")
-         .attr("stroke", "black")
-         .text("Stock Price");
-
-        g.selectAll(".bar")
-         .data(data)
-         .enter().append("rect")
-         .attr("class", "bar")
-         .attr("x", function(d) { return xScale(d.year); })
-         .attr("y", function(d) { return yScale(d.value); })
-         .attr("width", xScale.bandwidth())
-         .attr("height", function(d) { return height - yScale(d.value); });
-    });
-</script>
-</body>
-</html> -->
