--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>D3 UI Prototype</title>
   </head>
   <body>
-    <svg></svg>
+    <svg width="1000" height="500"></svg> 
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.min.js"></script> 
     <script src="index.js"></script>
   </body>
 </html>
